--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,8 +1,12 @@
 .Post {
-    width: 250px;
-    padding: 16px;
+    width: 200px;
+    height: 100px;
+    padding: 15px;
     text-align: center;
     border: 1px solid #eee;
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    white-space: nowrap;
     border-radius: 10px;
     box-shadow: 0 2px 3px #ccc;
     margin: 10px;
